--- a/app_for_fluuter/pubspec.yaml
+++ b/app_for_fluuter/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   #刷新
-  pull_to_refresh: ^1.4.5
+  pull_to_refresh: ^2.0.0
 
   #官方视频播放。
   #video_player: ^0.10.1+3
@@ -74,13 +74,13 @@ dependencies:
 
 
   #扫描二维码
-  barcode_scan: ^1.0.0
+#  barcode_scan: ^1.0.0
 
   #键盘
   keyboard_actions: ^3.1.2
 
   #选择器
-  flutter_picker: ^1.0.15
+  flutter_picker: ^2.0.2
 
   #地图
   #amap_map_fluttify: ^0.5.2+d62f0ad
@@ -92,7 +92,7 @@ dependencies:
   #flutter_bloc: ^0.21.0
 
   #图片预览
-  photo_view: ^0.11.1
+  photo_view: ^0.13.0
 
   #文件选择器
   file_picker: any
@@ -120,6 +120,8 @@ dependencies:
   #assets_audio_player: ^2.0.13+1
   just_audio: ^0.5.6
 
+  oktoast: ^3.1.3+1
+  get: ^4.3.8
 
 dev_dependencies:
   flutter_test:
