--- a/flutter_knowledge/pubspec.yaml
+++ b/flutter_knowledge/pubspec.yaml
@@ -49,10 +49,18 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  # loading
+  flutter_easyloading: any
 
-# The following section is specific to Flutter.
+  #
+  dio: any
+  cached_network_image: any
+
+  get: any
+
+  event_bus: any
+
+
 flutter:
 
   # The following line ensures that the Material Icons font is
